--- a/old_site/assets/css/main.css
+++ b/old_site/assets/css/main.css
@@ -2636,3 +2636,23 @@
 			}
 
 		}
+	.centeritem {
+		text-align: center;
+	}
+
+	/* Loader */
+
+	.loader {
+    border: 5px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #a6a6a6; /* Blue */
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+		animation: spin 2s linear infinite;
+		align: center;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
