--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
@@ -19,14 +20,14 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #2B738B;
-  --secondary: #FFFFFF;
+  --primary: #2b738b;
+  --secondary: white;
   --success: #28a745;
   --info: #ccc;
   --warning: #ffc107;
   --danger: #dc3545;
-  --light: #d3d3d3;
-  --dark: #323234;
+  --light: lightgrey;
+  --dark: #3e3e41;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -56,11 +57,11 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: PressStart2P, Lucida Console, Monaco, monospace;
+  font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #FFFFFF;
+  color: white;
   text-align: left;
   background-color: #323234; }
 
@@ -139,7 +140,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #D9AB2E;
+  color: #d9ab2e;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
@@ -302,7 +303,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.75rem;
-  font-family: Lucida Console, Monaco, monospace;
+  font-family: "Ubuntu Mono", monospace;
   font-weight: 500;
   line-height: 1.2;
   color: inherit; }
@@ -1094,7 +1095,7 @@ pre {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #FFFFFF; }
+  background-color: white; }
 
 .table-hover .table-secondary:hover {
   background-color: #f2f2f2; }
@@ -1160,13 +1161,13 @@ pre {
 .table-dark,
 .table-dark > th,
 .table-dark > td {
-  background-color: #c6c6c6; }
+  background-color: #c9c9ca; }
 
 .table-hover .table-dark:hover {
-  background-color: #b9b9b9; }
+  background-color: #bcbcbd; }
   .table-hover .table-dark:hover > td,
   .table-hover .table-dark:hover > th {
-    background-color: #b9b9b9; }
+    background-color: #bcbcbd; }
 
 .table-active,
 .table-active > th,
@@ -1329,7 +1330,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.5;
-  color: #FFFFFF;
+  color: white;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0; }
@@ -1648,8 +1649,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #2B738B;
-  border-color: #2B738B;
+  background-color: #2b738b;
+  border-color: #2b738b;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-primary:hover {
     color: #fff;
@@ -1659,8 +1660,8 @@ fieldset:disabled a.btn {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(43, 115, 139, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #2B738B;
-    border-color: #2B738B; }
+    background-color: #2b738b;
+    border-color: #2b738b; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -1816,47 +1817,47 @@ fieldset:disabled a.btn {
 
 .btn-dark {
   color: #fff;
-  background-color: #323234;
-  border-color: #323234;
+  background-color: #3e3e41;
+  border-color: #3e3e41;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); }
   .btn-dark:hover {
     color: #fff;
-    background-color: #1f1f21;
-    border-color: #19191a; }
+    background-color: #2b2b2d;
+    border-color: #252527; }
   .btn-dark:focus, .btn-dark.focus {
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(50, 50, 52, 0.5); }
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 0 0.2rem rgba(62, 62, 65, 0.5); }
   .btn-dark.disabled, .btn-dark:disabled {
     color: #fff;
-    background-color: #323234;
-    border-color: #323234; }
+    background-color: #3e3e41;
+    border-color: #3e3e41; }
   .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active,
   .show > .btn-dark.dropdown-toggle {
     color: #fff;
-    background-color: #19191a;
-    border-color: #131314; }
+    background-color: #252527;
+    border-color: #1f1f20; }
     .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus,
     .show > .btn-dark.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(50, 50, 52, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(62, 62, 65, 0.5); }
 
 .btn-outline-primary {
-  color: #2B738B;
+  color: #2b738b;
   background-color: transparent;
   background-image: none;
-  border-color: #2B738B; }
+  border-color: #2b738b; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #2B738B;
-    border-color: #2B738B; }
+    background-color: #2b738b;
+    border-color: #2b738b; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(43, 115, 139, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #2B738B;
+    color: #2b738b;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #2B738B;
-    border-color: #2B738B; }
+    background-color: #2b738b;
+    border-color: #2b738b; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(43, 115, 139, 0.5); }
@@ -2000,31 +2001,31 @@ fieldset:disabled a.btn {
       box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(211, 211, 211, 0.5); }
 
 .btn-outline-dark {
-  color: #323234;
+  color: #3e3e41;
   background-color: transparent;
   background-image: none;
-  border-color: #323234; }
+  border-color: #3e3e41; }
   .btn-outline-dark:hover {
     color: #fff;
-    background-color: #323234;
-    border-color: #323234; }
+    background-color: #3e3e41;
+    border-color: #3e3e41; }
   .btn-outline-dark:focus, .btn-outline-dark.focus {
-    box-shadow: 0 0 0 0.2rem rgba(50, 50, 52, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(62, 62, 65, 0.5); }
   .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-    color: #323234;
+    color: #3e3e41;
     background-color: transparent; }
   .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active,
   .show > .btn-outline-dark.dropdown-toggle {
     color: #fff;
-    background-color: #323234;
-    border-color: #323234; }
+    background-color: #3e3e41;
+    border-color: #3e3e41; }
     .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-dark.dropdown-toggle:focus {
-      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(50, 50, 52, 0.5); }
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125), 0 0 0 0.2rem rgba(62, 62, 65, 0.5); }
 
 .btn-link {
   font-weight: 400;
-  color: #D9AB2E;
+  color: #d9ab2e;
   background-color: transparent; }
   .btn-link:hover {
     color: #9e7b1d;
@@ -2236,7 +2237,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #2B738B; }
+    background-color: #2b738b; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2505,7 +2506,7 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    background-color: #2B738B;
+    background-color: #2b738b;
     box-shadow: none; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 1px #323234, 0 0 0 0.2rem rgba(43, 115, 139, 0.25); }
@@ -2552,13 +2553,13 @@ input[type="button"].btn-block {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #2B738B; }
+  background-color: #2b738b; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #2B738B;
+  background-color: #2b738b;
   box-shadow: none; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -2574,7 +2575,7 @@ input[type="button"].btn-block {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #2B738B; }
+  background-color: #2b738b; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
@@ -2702,7 +2703,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #2B738B;
+    background-color: #2b738b;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2726,7 +2727,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #2B738B;
+    background-color: #2b738b;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2753,7 +2754,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #2B738B;
+    background-color: #2b738b;
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2836,7 +2837,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #2B738B; }
+  background-color: #2b738b; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3339,7 +3340,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #D9AB2E;
+  color: #d9ab2e;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -3367,8 +3368,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #2B738B;
-  border-color: #2B738B; }
+  background-color: #2b738b;
+  border-color: #2b738b; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3427,7 +3428,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #2B738B; }
+  background-color: #2b738b; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
     color: #fff;
     text-decoration: none;
@@ -3483,11 +3484,11 @@ input[type="button"].btn-block {
 
 .badge-dark {
   color: #fff;
-  background-color: #323234; }
+  background-color: #3e3e41; }
   .badge-dark[href]:hover, .badge-dark[href]:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #19191a; }
+    background-color: #252527; }
 
 .jumbotron {
   padding: 2rem 1rem;
@@ -3589,13 +3590,13 @@ input[type="button"].btn-block {
     color: #555555; }
 
 .alert-dark {
-  color: #1a1a1b;
-  background-color: #d6d6d6;
-  border-color: #c6c6c6; }
+  color: #202022;
+  background-color: #d8d8d9;
+  border-color: #c9c9ca; }
   .alert-dark hr {
-    border-top-color: #b9b9b9; }
+    border-top-color: #bcbcbd; }
   .alert-dark .alert-link {
-    color: #010101; }
+    color: #070708; }
 
 @-webkit-keyframes progress-bar-stripes {
   from {
@@ -3625,7 +3626,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #2B738B;
+  background-color: #2b738b;
   transition: width 0.6s ease; }
   @media screen and (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3687,8 +3688,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #2B738B;
-    border-color: #2B738B; }
+    background-color: #2b738b;
+    border-color: #2b738b; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -3779,15 +3780,15 @@ input[type="button"].btn-block {
     border-color: #6e6e6e; }
 
 .list-group-item-dark {
-  color: #1a1a1b;
-  background-color: #c6c6c6; }
+  color: #202022;
+  background-color: #c9c9ca; }
   .list-group-item-dark.list-group-item-action:hover, .list-group-item-dark.list-group-item-action:focus {
-    color: #1a1a1b;
-    background-color: #b9b9b9; }
+    color: #202022;
+    background-color: #bcbcbd; }
   .list-group-item-dark.list-group-item-action.active {
     color: #fff;
-    background-color: #1a1a1b;
-    border-color: #1a1a1b; }
+    background-color: #202022;
+    border-color: #202022; }
 
 .close {
   float: right;
@@ -3941,7 +3942,7 @@ button.close {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: PressStart2P, Lucida Console, Monaco, monospace;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4026,7 +4027,7 @@ button.close {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: PressStart2P, Lucida Console, Monaco, monospace;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4366,7 +4367,7 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #2B738B !important; }
+  background-color: #2b738b !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4422,12 +4423,12 @@ button.bg-light:focus {
   background-color: #bababa !important; }
 
 .bg-dark {
-  background-color: #323234 !important; }
+  background-color: #3e3e41 !important; }
 
 a.bg-dark:hover, a.bg-dark:focus,
 button.bg-dark:hover,
 button.bg-dark:focus {
-  background-color: #19191a !important; }
+  background-color: #252527 !important; }
 
 .bg-white {
   background-color: #fff !important; }
@@ -4466,7 +4467,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #2B738B !important; }
+  border-color: #2b738b !important; }
 
 .border-secondary {
   border-color: white !important; }
@@ -4487,7 +4488,7 @@ button.bg-dark:focus {
   border-color: lightgrey !important; }
 
 .border-dark {
-  border-color: #323234 !important; }
+  border-color: #3e3e41 !important; }
 
 .border-white {
   border-color: #fff !important; }
@@ -6272,7 +6273,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #2B738B !important; }
+  color: #2b738b !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #1f5364 !important; }
@@ -6314,10 +6315,10 @@ a.text-light:hover, a.text-light:focus {
   color: #bababa !important; }
 
 .text-dark {
-  color: #323234 !important; }
+  color: #3e3e41 !important; }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #19191a !important; }
+  color: #252527 !important; }
 
 .text-body {
   color: white !important; }
