--- a/grape.css
+++ b/grape.css
@@ -111,24 +111,28 @@ body {
 #igbjpg {
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(rgba(3, 21, 38, 0.6) 1%, rgba(3, 21, 38, 0.6) 100%), url("https://i.imgur.com/LpPvWwk.jpg");
+  background-image: linear-gradient(rgba(3, 21, 38, 0.8) 1%, rgba(3, 21, 38, 0.8) 100%), url("/images/bmd.jpg");
   background-position: 0px 0px, 0px 0px;
   background-size: 100% 100%, auto auto;
   background-repeat: repeat, round;
   background-attachment: scroll, fixed;
   background-origin: padding-box, content-box;
-  height: 304px;
   position: sticky;
+  object-fit: fill;
+  min-height: 233px;
+  max-height: 395px;
+  height: auto;
 }
 #iokscs {
-  color: white;
-  font-family: Helvetica, sans-serif;
+  font-family: "Anton", sans-serif;
   text-align: center;
-  font-size: 47px;
+  font-size: 72px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-content: center;
+  color: rgba(255, 255, 255, 1);
+  text-transform: uppercase;
 }
 #ihm4u {
   transition: opacity 2s ease-in 1s;
@@ -142,7 +146,7 @@ body {
 }
 #ifs9z {
   background-color: rgba(2, 7, 12, 1);
-  padding-top: 26px;
+  padding-top: 106px;
   padding-right: 0px;
   padding-bottom: 26px;
   padding-left: 0px;
@@ -162,6 +166,7 @@ body {
   padding-right: 0px;
   padding-bottom: 0px;
   padding-left: 0px;
+  color: white;
 }
 .gjs-icon {
   display: inline-block;
@@ -193,9 +198,17 @@ body {
   margin-left: 10px;
   padding-top: 5px;
 }
+.icon {
+  color: white;
+}
 #iokscs:hover {
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
+  font-family: "Anton", sans-serif;
+  text-align: center;
+  font-size: 72px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
 }
 .gjs-link {
   vertical-align: top;
@@ -205,8 +218,8 @@ body {
   color: inherit;
 }
 #ih4tpq {
-  background-image: url("https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: 0px -210px;
+  background-image: url("https://camo.githubusercontent.com/56a4b17e7621723ebfc4631796b5a6f591721aadcc13776adfee0a712db0f30d/68747470733a2f2f692e696d6775722e636f6d2f705250494478562e706e67");
+  background-position: -70px -210px;
   background-size: 560px 560px;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -242,6 +255,52 @@ body {
   padding-bottom: 5px;
   padding-left: 5px;
 }
+
+/* CSS */
+.button-29 {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, rgba(58, 65, 111, 0.5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.button-29:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.button-29:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-29:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
+}
 #ib3lsd {
   padding-top: 5px;
   padding-right: 10px;
@@ -273,282 +332,6 @@ body {
   max-width: 425px;
   width: 425px;
 }
-#i4kufm {
-  background-image: url("https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: 0px -210px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#i250cz {
-  display: flex;
-}
-#i9ymmz {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#itwg6h {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#irot5w {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#imao4k {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#ia1m9w {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
-}
-#iok86h {
-  background-image: url("https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: 0px -210px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#icwey2 {
-  display: flex;
-}
-#i4fvu5 {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#iurbro {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#in7chf {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#ioceor {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#igiv1u {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
-}
-#ihg01h {
-  background-image: url("https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: 0px -210px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#ibg0np {
-  display: flex;
-}
-#ix6s7j {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#i8vtsp {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#i3kgzf {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#iwfz2x {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#isccbj {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
-}
-#iyvqkh {
-  background-image: url("https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: 0px -210px;
-  background-size: 560px 560px;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-origin: padding-box;
-  min-width: 320px;
-  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
-  max-height: 182px;
-  min-height: 130px;
-  max-width: 425px;
-  height: 150px;
-  justify-content: center;
-  align-items: center;
-}
-#iw3vz7 {
-  display: flex;
-}
-#ix50ke {
-  color: black;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 3px;
-  display: flex;
-}
-#i2g1ad {
-  color: #1c8eff;
-  display: inline-block;
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: 700;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-#ioq5x1 {
-  padding-top: 5px;
-  padding-right: 10px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  display: flex;
-  flex: 1 1 0%;
-  align-self: center;
-  flex-direction: column;
-}
-#iyy8t7 {
-  min-width: 320px;
-  min-height: 120px;
-  max-width: 425px;
-}
-#icsoe6 {
-  background-clip: content-box;
-  background-color: rgba(255, 255, 255, 1);
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  flex: 0 1 auto;
-  min-width: 320px;
-  max-width: 425px;
-  width: 425px;
-}
 #isfqo:hover {
   opacity: 50%;
   cursor: pointer;
@@ -557,6 +340,158 @@ body {
   cursor: pointer;
   opacity: 50%;
 }
+#iex6pg:hover {
+  text-decoration: none;
+}
+#irwrq {
+  background-image: url("/images/rp120.jpg");
+  background-position: -100px -310px;
+  background-size: 560px 560px;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-origin: padding-box;
+  min-width: 320px;
+  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
+  max-height: 182px;
+  min-height: 130px;
+  max-width: 425px;
+  height: 150px;
+  justify-content: center;
+  align-items: center;
+}
+#i9k2v {
+  display: flex;
+}
+#iv14v {
+  color: black;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 3px;
+  display: flex;
+}
+#ii92j:hover {
+  text-decoration: none;
+}
+#imu76 {
+  color: #1c8eff;
+  display: inline-block;
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+#ixbsk {
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  display: flex;
+  flex: 1 1 0%;
+  align-self: center;
+  flex-direction: column;
+}
+#it875 {
+  min-width: 320px;
+  min-height: 120px;
+  max-width: 425px;
+}
+#iqall {
+  background-clip: content-box;
+  background-color: rgba(255, 255, 255, 1);
+  padding-top: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  flex: 0 1 auto;
+  min-width: 320px;
+  max-width: 425px;
+  width: 425px;
+}
+#icni9 {
+  background-image: url("/images/homelab.jpg");
+  background-position: -90px -210px;
+  background-size: 560px 560px;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-origin: padding-box;
+  min-width: 320px;
+  box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0);
+  max-height: 182px;
+  min-height: 130px;
+  max-width: 425px;
+  height: 150px;
+  justify-content: center;
+  align-items: center;
+}
+#iswhv {
+  display: flex;
+}
+#ihd1w {
+  color: black;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 3px;
+  display: flex;
+}
+#ixw7l:hover {
+  text-decoration: none;
+}
+#iyshk {
+  color: #1c8eff;
+  display: inline-block;
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+#irvbl {
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  display: flex;
+  flex: 1 1 0%;
+  align-self: center;
+  flex-direction: column;
+}
+#i9e5j {
+  min-width: 320px;
+  min-height: 120px;
+  max-width: 425px;
+}
+#iwrct {
+  background-clip: content-box;
+  background-color: rgba(255, 255, 255, 1);
+  padding-top: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  flex: 0 1 auto;
+  min-width: 320px;
+  max-width: 425px;
+  width: 425px;
+}
+
+#iomic {
+  text-align: center;
+}
+
 @keyframes fadeEffect {
   from {
     opacity: 0;
@@ -582,44 +517,28 @@ body {
   #ix7gtx {
     width: auto;
   }
-  #irot5w {
+  #igbjpg {
+    display: flex;
+    height: auto;
+  }
+  #ixbsk {
     min-width: 320px;
     max-width: 425px;
     width: auto;
     align-self: auto;
     flex: 0 1 auto;
   }
-  #imao4k {
+  #it875 {
     width: auto;
   }
-  #in7chf {
+  #irvbl {
     min-width: 320px;
     max-width: 425px;
     width: auto;
     align-self: auto;
     flex: 0 1 auto;
   }
-  #ioceor {
-    width: auto;
-  }
-  #i3kgzf {
-    min-width: 320px;
-    max-width: 425px;
-    width: auto;
-    align-self: auto;
-    flex: 0 1 auto;
-  }
-  #iwfz2x {
-    width: auto;
-  }
-  #ioq5x1 {
-    min-width: 320px;
-    max-width: 425px;
-    width: auto;
-    align-self: auto;
-    flex: 0 1 auto;
-  }
-  #iyy8t7 {
+  #i9e5j {
     width: auto;
   }
 }
@@ -641,71 +560,40 @@ body {
     align-self: auto;
     min-width: 220px;
   }
-  #i4kufm {
+  #iokscs {
+    font-size: 27px;
+  }
+  #irwrq {
     min-width: 220px;
     width: auto;
   }
-  #irot5w {
+  #ixbsk {
     align-self: auto;
     min-width: 220px;
   }
-  #imao4k {
+  #it875 {
     width: auto;
     min-height: 120px;
     min-width: 300px;
   }
-  #ia1m9w {
+  #iqall {
     min-width: 220px;
     width: auto;
   }
-  #iok86h {
+  #icni9 {
     min-width: 220px;
     width: auto;
   }
-  #in7chf {
+  #irvbl {
     align-self: auto;
     min-width: 220px;
   }
-  #ioceor {
+  #i9e5j {
     width: auto;
     min-height: 120px;
     min-width: 300px;
   }
-  #igiv1u {
-    min-width: 220px;
-    width: auto;
-  }
-  #ihg01h {
-    min-width: 220px;
-    width: auto;
-  }
-  #i3kgzf {
-    align-self: auto;
-    min-width: 220px;
-  }
-  #iwfz2x {
-    width: auto;
-    min-height: 120px;
-    min-width: 300px;
-  }
-  #isccbj {
-    min-width: 220px;
-    width: auto;
-  }
-  #iyvqkh {
-    min-width: 220px;
-    width: auto;
-  }
-  #ioq5x1 {
-    align-self: auto;
-    min-width: 220px;
-  }
-  #iyy8t7 {
-    width: auto;
-    min-height: 120px;
-    min-width: 300px;
-  }
-  #icsoe6 {
+  #iwrct {
     min-width: 220px;
     width: auto;
   }
